# cpp-luogu

./: CMakeLists.txt  README.md
 binary-index-tree/: 1774-nearest-god.cpp  1908-reversed-pair.cpp  1972-necklace.cpp  2345-cow-market.cpp  5057-binary-operation.cpp  bit-demo1.cpp  bit-demo2.cpp
contest/2020-oct/: noi.cpp
contest/cf-819-div2/: a-array.cpp  b-sequence.cpp
dfs/: 1669g-fall-down.cpp
discretion/: discretion_demo.cpp
dp/: 1002-horse.cpp  1020-missile-intercept.cpp  1044-stack.cpp  1048-gather-herb.cpp  1077-flower.cpp  1091-chorus.cpp  1754-ticket.cpp  1833-sakura.cpp  2196-mine.cpp  2722-score.cpp  2918-buy-hay.cpp  edit-distance.cpp  longest-common-sequence.cpp
dp/bag/exercise/: 1064-tree-budget.cpp  1466-subset-num.cpp  5322-play-war.cpp
dp/bag/template/: 01bag.cpp  01bag2.cpp  complete-bag.cpp  depend-bag.cpp  group-bag.cpp  mixed-bag.cpp  multi-bag.cpp
dp/section/: 1880-combination.cpp
dp/tree/: 1352-ball.cpp  2014-choose-class.cpp
graph/: 1038-neural-net.cpp  1111-restore-roads.cpp  1186-traffic.cpp  1194-buy-gift-prim.cpp  1194-buy-gift.cpp  1342-invitation.cpp  1351-value.cpp  1621-set.cpp  1629-post-path.cpp  1841-important-cities.cpp  1991-communication-net.cpp  2212-water-field.cpp  2384-smallest-product.cpp  2661-friend.cpp  3366-kruskal.cpp  3831-return-home.cpp  3958-cheese.cpp  4776-dijkstra.cpp  build-road.cpp
graph/basic/: 1807-longest-path.cpp  2121-carpet.cpp  3916-traverse.cpp  4017-food-chain.cpp  5318-search.cpp
graph/net-flow/: 2740-drainage.cpp  2756-pilot-match.cpp  2763-arrange-test.cpp  3254-table-arrange.cpp  EK-demo.cpp  dinic-demo.cpp
graph/template/: 3366-mst.cpp  3385-neg-ring.cpp  4779-dijkstra.cpp  bellman-ford.cpp  dijkstra-demo.cpp  floyd-demo.cpp  kruskal.cpp  spfa-demo.cpp  toposort.cpp
greedy/: 1080-king-game.cpp  1199-three-countries.cpp  1702d-expensive-string.cpp  1704c-virus.cpp  1721b-deadly-laser.cpp
hash/: 1102-minus-problem.cpp  1955-analyze-program.cpp  2104-bin.cpp  3370-string-hash.cpp  discretization.cpp  discretization2.cpp
heap/: 1168-mid.cpp
high-precision/: 1037-generation.cpp  1045-mason.cpp  1480-divide.cpp  1601-add.cpp  fast-matrix-power.cpp  fast-power.cpp  high-precision2.cpp  high_precision.cpp
math/: 1715b-beautiful-array.cpp
math/prime/: Erichsen-sieve.cpp  Euler-sieve.cpp
segment-tree/: 1531-hate.cpp  1679b-stone-age-problem-2.cpp  1679b-stone-age-problem.cpp  2023-sequence.cpp  demo.cpp  segment_tree_demo1.cpp  segment_tree_demo2.cpp  template-1.cpp  template-2.cpp  weight_segment_tree_demo.cpp
simulation/: 1011-station.cpp  1012-numbers.cpp  1061-jam.cpp  1328-rock.cpp  1713b-optimal-reduction.cpp  1722c_word_game.cpp  2615-magic.cpp
sort/: 1056-seats.cpp  1722d-line.cpp
string/: 3879-reading.cpp  3966-count.cpp  4391-transfer.cpp  4824-censor.cpp  ac-demo.cpp  ac-demo2.cpp  ac-demo3.cpp  kmp-demo.cpp  trie-demo.cpp
test/: 2021_test.cpp  test.cpp  test_debug.cpp  test_input.cpp
tree/: 1030-rebuild-tree.cpp  1364-min-distance.cpp  1827-rebuild-tree.cpp  4408-search-boy.cpp  4913-tree-height.cpp  tree-diameter.cpp
tree/chain/: 3384-tree-chain-template.cpp
tree/dfn/: loj-144-dfn1.cpp  loj-145-dfn2.cpp
union-find/: 2078-friends.cpp  2256-race-judgement.cpp
