cmake_minimum_required(VERSION 3.17)
project(luogu)

set(CMAKE_CXX_STANDARD 14)

add_executable(luogu main.cpp)
add_executable(4913-tree-height tree/4913-tree-height.cpp)
add_executable(1827-rebuild-tree tree/1827-rebuild-tree.cpp)
add_executable(1030-rebuild-tree tree/1030-rebuild-tree.cpp)
add_executable(1364-min-distance tree/1364-min-distance.cpp)
add_executable(3370-string-hash hash/3370-string-hash.cpp)
add_executable(1102-minus-problem hash/1102-minus-problem.cpp)
add_executable(1955-analyze-program hash/1955-analyze-program.cpp)
add_executable(2078-friends union-find/2078-friends.cpp)
add_executable(2256-race-judgement union-find/2256-race-judgement.cpp)
add_executable(3366-mst graph/template/3366-mst.cpp)
add_executable(1991-communication-net graph/1991-communication-net.cpp)
add_executable(1194-buy-gift graph/1194-buy-gift.cpp)
add_executable(1194-buy-gift-prim graph/1194-buy-gift-prim.cpp)
add_executable(4779-dijkstra graph/template/4779-dijkstra.cpp)
add_executable(1629-post-path graph/1629-post-path.cpp)
add_executable(1342-invitation graph/1342-invitation.cpp)
add_executable(01bag dp/bag/template/01bag.cpp)
add_executable(01bag2 dp/bag/template/01bag2.cpp)
add_executable(complete-bag dp/bag/template/complete-bag.cpp)
add_executable(multi-bag dp/bag/template/multi-bag.cpp)
add_executable(mixed-bag dp/bag/template/mixed-bag.cpp)
add_executable(1048-gather-herb dp/1048-gather-herb.cpp)
add_executable(2918-buy-hay dp/2918-buy-hay.cpp)
add_executable(edit-distance dp/edit-distance.cpp)
add_executable(longest-common-sequence dp/longest-common-sequence.cpp)
add_executable(1020-missile-intercept dp/1020-missile-intercept.cpp)
add_executable(1352-ball dp/tree/1352-ball.cpp)
add_executable(2014-choose-class dp/tree/2014-choose-class.cpp)
add_executable(5318-search graph/basic/5318-search.cpp)
add_executable(3916-traverse graph/basic/3916-traverse.cpp)
add_executable(1807-longest-path graph/basic/1807-longest-path.cpp)
add_executable(bellman-ford graph/template/bellman-ford.cpp)
add_executable(4017-food-chain graph/basic/4017-food-chain.cpp)
add_executable(kruskal graph/template/kruskal.cpp)
add_executable(noi contest/2020-oct/noi.cpp)
add_executable(mex contest/2020-oct/mex.cpp)
add_executable(2121-carpet graph/basic/2121-carpet.cpp)
add_executable(demo segment-tree/demo.cpp)
add_executable(template-1 segment-tree/template-1.cpp)
add_executable(template-2 segment-tree/template-2.cpp)
add_executable(1038-neural-net graph/1038-neural-net.cpp)
add_executable(toposort graph/template/toposort.cpp)
add_executable(discretization hash/discretization.cpp)
add_executable(discretization2 hash/discretization2.cpp)
add_executable(2104-bin hash/2104-bin.cpp)
add_executable(1056-seats sort/1056-seats.cpp)
add_executable(1002-horse dp/1002-horse.cpp)
add_executable(2196-mine dp/2196-mine.cpp)
add_executable(1077-flower dp/1077-flower.cpp)
add_executable(1091-chorus dp/1091-chorus.cpp)
add_executable(2722-score dp/2722-score.cpp)
add_executable(1833-sakura dp/1833-sakura.cpp)
add_executable(1186 graph/1186-traffic.cpp)
add_executable(1044-stack dp/1044-stack.cpp)
add_executable(1754-ticket dp/1754-ticket.cpp)
add_executable(2615-magic simulation/2615-magic.cpp)
add_executable(2661-friend graph/2661-friend.cpp)
add_executable(1328-rock simulation/1328-rock.cpp simulation/1061-jam.cpp)
add_executable(1351-value graph/1351-value.cpp)
add_executable(kmp-demo string/kmp-demo.cpp)
add_executable(4824-censor string/4824-censor.cpp)
add_executable(4391-transfer string/4391-transfer.cpp)
add_executable(trie-demo string/trie-demo.cpp)
add_executable(3879-reading string/3879-reading.cpp)
add_executable(ac-demo string/ac-demo.cpp)
add_executable(ac-demo2 string/ac-demo2.cpp)
add_executable(ac-demo3 string/ac-demo3.cpp)
add_executable(3966-count string/3966-count.cpp)
add_executable(high_precision high-precision/high_precision.cpp)
add_executable(high-precision2 high-precision/high-precision2.cpp)
add_executable(1037-generation high-precision/1037-generation.cpp)
add_executable(fast-power high-precision/fast-power.cpp)
add_executable(1045-mason high-precision/1045-mason.cpp)
add_executable(fast-matrix-power high-precision/fast-matrix-power.cpp)
add_executable(bit-demo1 " binary-index-tree/bit-demo1.cpp")
add_executable(bit-demo2 " binary-index-tree/bit-demo2.cpp")
add_executable(1168-mid heap/1168-mid.cpp)
add_executable(2345-cow-market " binary-index-tree/2345-cow-market.cpp")
add_executable(1880-combination dp/section/1880-combination.cpp)
add_executable(1908-reversed-pair " binary-index-tree/1908-reversed-pair.cpp")
add_executable(1774-nearest-god " binary-index-tree/1774-nearest-god.cpp")
add_executable(5057-binary-operation " binary-index-tree/5057-binary-operation.cpp")
add_executable(1466-subset-num dp/bag/exercise/1466-subset-num.cpp)
add_executable(group-bag dp/bag/template/group-bag.cpp)
add_executable(5322-play-war dp/bag/exercise/5322-play-war.cpp)
add_executable(EK-demo graph/net-flow/EK-demo.cpp)
add_executable(2740-drainage graph/net-flow/2740-drainage.cpp)
add_executable(dinic-demo graph/net-flow/dinic-demo.cpp)
add_executable(2756-pilot-match graph/net-flow/2756-pilot-match.cpp)
add_executable(3254-table-arrange graph/net-flow/3254-table-arrange.cpp)
add_executable(2763-arrange-test graph/net-flow/2763-arrange-test.cpp)
add_executable(tree-diameter tree/tree-diameter.cpp)
add_executable(4408-search-boy tree/4408-search-boy.cpp)
add_executable(depend-bag dp/bag/template/depend-bag.cpp)
add_executable(1064-tree-budget dp/bag/exercise/1064-tree-budget.cpp)
add_executable(1621-set graph/1621-set.cpp)
add_executable(floyd-demo graph/template/floyd-demo.cpp)
add_executable(1841-important-cities graph/1841-important-cities.cpp)
add_executable(spfa-demo graph/template/spfa-demo.cpp)
add_executable(dijkstra-demo graph/template/dijkstra-demo.cpp)
add_executable(3385-neg-ring graph/template/3385-neg-ring.cpp)
add_executable(2384-smallest-product graph/2384-smallest-product.cpp)
add_executable(3831-return-home graph/3831-return-home.cpp)
add_executable(2212-water-field graph/2212-water-field.cpp)
add_executable(build-road graph/build-road.cpp)
add_executable(1972-necklace " binary-index-tree/1972-necklace.cpp")
add_executable(test_debug test/test_debug.cpp)
add_executable(test_input test/test_input.cpp)
add_executable(segment_tree_demo1 "segment-tree/segment_tree_demo1.cpp") 
add_executable(segment_tree_demo2 "segment-tree/segment_tree_demo2.cpp")  
add_executable(2023-sequence "segment-tree/2023-sequence.cpp")  
add_executable(1513-hate "segment-tree/1531-hate.cpp")  

add_executable(weight_segment_tree_demo segment-tree/weight_segment_tree_demo.cpp)
add_executable(discretion_demo discretion/discretion_demo.cpp)
add_executable(loj-144-dfn1 tree/dfn/loj-144-dfn1.cpp)
add_executable(loj-145-dfn2 tree/dfn/loj-145-dfn2.cpp)
add_executable(3384-tree-chain-template tree/chain/3384-tree-chain-template.cpp)
add_executable(Erichsen-screen math/prime/Erichsen-sieve.cpp)
add_executable(Euler-screen math/prime/Euler-sieve.cpp)
add_executable(2021_test test/2021_test.cpp)

add_executable(test test/test.cpp)
add_executable(1061-jam simulation/1061-jam.cpp)
add_executable(1199-three-countries greedy/1199-three-countries.cpp)
add_executable(1080-king-game greedy/1080-king-game.cpp)
add_executable(high-precision-template high-precision/high-precision-template.cpp)
add_executable(1601-add high-precision/1601-add.cpp)
add_executable(1480-divide high-precision/1480-divide.cpp)
add_executable(1011-station simulation/1011-station.cpp)
add_executable(1012-numbers simulation/1012-numbers.cpp)
add_executable(3958-cheese graph/3958-cheese.cpp)
add_executable(1111-restore-roads graph/1111-restore-roads.cpp)
add_executable(4776-dijkstra graph/4776-dijkstra.cpp)
add_executable(3366-kruskal graph/3366-kruskal.cpp)
add_executable(1722c_word_game simulation/1722c_word_game.cpp)
add_executable(1721b-deadly-laser greedy/1721b-deadly-laser.cpp)
add_executable(1722d-line sort/1722d-line.cpp)
add_executable(1715b-beautiful-array math/1715b-beautiful-array.cpp)
add_executable(1669g-fall-down dfs/1669g-fall-down.cpp)
add_executable(1679b-stone-age-problem segment-tree/1679b-stone-age-problem.cpp)
add_executable(1679b-stone-age-problem-2 segment-tree/1679b-stone-age-problem-2.cpp)
add_executable(a-array contest/cf-819-div2/a-array.cpp)
add_executable(b-sequence contest/cf-819-div2/b-sequence.cpp)
add_executable(1713b-optimal-reduction simulation/1713b-optimal-reduction.cpp)
add_executable(1702d-expensive-string greedy/1702d-expensive-string.cpp)
add_executable(1704c-virus greedy/1704c-virus.cpp)